--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ readme = "README.md"
 requires-python = ">=3.13, <4"
 
 [project.scripts]
-interactive_object_evidence_over_time = "tbp.plot.interactive_object_evidence_over_time:main"
+plot = "tbp.plot.cli:main"
 
 [dependency-groups]
 dev = [
