--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
+    "matplotlib",
+    "seaborn",
     "pandas",
     "torch",
     "trimesh",
