feat: move PR on interactive_hypothesis_space_correlation from tbp.monty (#7)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "torch",
     "trimesh",
     "vedo",
+    "pypubsub",
     "scipy>=1.16.2",
 ]
 description = "A visualization tool for plotting tbp.monty visualizations."
