--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "vedo",
     "pypubsub",
     "scipy>=1.16.2",
+    "torch-geometric>=2.7.0",
 ]
 description = "A visualization tool for plotting tbp.monty visualizations."
 dynamic = ["version"]
